[project]
name = "microbiome-imputer"
version = "0.1.1"
description = "A CLI tool to impute microbiome abundance data using a denoising autoencoder."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "tensorflow>=2.10.0",
    "pandas",
    "numpy",
    "scikit-learn",
]

[project.scripts]
microbiome-imputer = "imputer.cli:main"

[tool.setuptools]
packages = ["imputer"]
include-package-data = true

[tool.setuptools.package-data]
"imputer" = ["feature_categories.json"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
