[metadata]
name = microbiome-imputer
version = 0.1.0
author = Your Name
description = A CLI tool to perform imputation on microbiome abundance profiles
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
install_requires =
    numpy
    pandas
    tensorflow

[options.entry_points]
console_scripts =
    microbiome-imputer = imputer.cli:main
